--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-cache: bundler
 before_install:
   - gem install bundler
 
@@ -6,6 +5,7 @@ language: csharp
 solution: ReviewProject.sln
 mono: none
 dotnet: 2.2
+cache: ccache
 
 script:
  - dotnet restore
