--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,14 @@ addons:
     confinement: classic
     channel: 2.2/stable
 
+env:
+ - TEST_SUITE: MSUnitTestProject
+ - TEST_SUITE: NUnitTestProject
+ - TEST_SUITE: XUnitTestProject
+
 before_script:
  - sudo snap alias dotnet-sdk.dotnet dotnet
 
 script:
  - dotnet build
- - dotnet test 
+ - "bundle exec rake test: $TEST_SUITE"
