--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,6 @@ env:
  - TEST_SUITE: MSTestProjet
 
 script:
- - "bundle exec rake dotnet build $BUILD"
- - "bundle exec rake dotnet test $TEST_SUITE"
+ - "bundle exec dotnet build $BUILD"
+ - "bundle exec dotnet test $TEST_SUITE"
 
