--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,6 @@ addons:
 before_script:
  - sudo snap alias dotnet-sdk.dotnet dotnet
 
-env:
- - TEST_SUITE: XUnitTestProject
- - TEST_SUITE: NUnitTestProject
- - TEST_SUITE: MSUnitTestProject
-
 script:
- - dotnet test $TEST_SUITE
+ - dotnet test
 
