--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ addons:
 
 before_script:
  - sudo snap alias dotnet-sdk.dotnet dotnet
+ - dotnet dev-certs https --trust
 
 script:
  - dotnet test
