Revert "no parallel testing !"
This reverts commit 1f0423d8094e086b6a99e7e34cb0fe6a5b4f2a97.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,23 @@ language: csharp
 solution: ReviewProject.sln
 mono: none
 
+before_install:
+ - gem install bundler
+
 addons:
  snaps:
   - name: dotnet-sdk
     confinement: classic
     channel: 2.2/stable
 
+env:
+ - TEST_SUITE: MSUnitTestProject
+ - TEST_SUITE: NUnitTestProject
+ - TEST_SUITE: XUnitTestProject
+
 before_script:
  - sudo snap alias dotnet-sdk.dotnet dotnet
 
 script:
  - dotnet build
- - dotnet test
+ - "bundle exec rake test: $TEST_SUITE"
